<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ldu.guofeng.imdemo.view.CustomIndexToolbar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:orientation="vertical"
        app:title_text="@string/setting"
        app:title_visible="true">

    </ldu.guofeng.imdemo.view.CustomIndexToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar">

        <LinearLayout
            android:id="@+id/ll_dynamic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/app_auther"
                    android:textSize="30sp" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="0dp"
                android:background="@color/line" />

            <!-- -->

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="20dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/rl_msg_show"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/set_nofitication" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:text="@string/nofitication"
                    android:textColor="#444444"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_right_arrows" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />

            <!-- -->
            <RelativeLayout
                android:id="@+id/rl_msg_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/set_msgalert" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:text="@string/msg_alert"
                    android:textColor="#444444"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_right_arrows" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />
            <!-- -->

            <RelativeLayout
                android:id="@+id/rl_msg_clear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/set_msgclear" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:text="@string/clear_msg"
                    android:textColor="#444444"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_right_arrows" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />
            <!-- -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="20dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/rl_about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/set_about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:text="@string/about_author"
                    android:textColor="#444444"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/list_right_arrows" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />
            <!-- -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="20dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/rl_app_exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/set_exitapp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:text="@string/exit_app"
                    android:textColor="#d81e06"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>