<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="32dp"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:paddingTop="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:drawableStart="@drawable/ic_lobe"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/common_title"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="6dp"
            android:background="@color/line"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/app_introduce"
            tools:ignore="RtlCompat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:background="@color/line" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:drawableStart="@drawable/ic_flower"
            android:gravity="center"
            android:text="做一件有趣的事情"
            android:textColor="@color/common_title"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:background="@color/line"
            tools:ignore="RtlCompat" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:columnCount="2">

            <Button
                android:id="@+id/btn_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_github"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:text="查看应用源码"
                android:textColor="@color/cloudyText"
                tools:ignore="RtlCompat"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btn_csdn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_csdn"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:text="浏览我的博客"
                android:textColor="@color/cloudyText"
                tools:ignore="RtlCompat"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btn_alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_alplay"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:text="随意捐赠支持"
                android:textColor="@color/cloudyText"
                tools:ignore="RtlCompat"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btn_shareApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_share"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:text="立即分享应用"
                android:textColor="@color/cloudyText"
                tools:ignore="RtlCompat"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btn_updataApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_down"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:text="检查软件更新"
                android:textColor="@color/cloudyText"
                tools:ignore="RtlCompat"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btn_bug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_suggest"
                android:gravity="start|center_vertical"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:text="意见错误反馈"
                android:textColor="@color/cloudyText"
                tools:ignore="RtlCompat"
                tools:targetApi="lollipop" />
        </GridLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:background="@color/line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:drawableStart="@drawable/ic_android"
            android:gravity="center"
            android:text="感谢前辈造的轮子"
            android:textColor="@color/common_title"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:background="@color/line"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:autoLink="web"
            android:lineSpacingExtra="6dp"
            android:text="@string/open_source"
            android:textColorLink="@color/cloudyText"
            android:textSize="12sp"
            tools:ignore="RtlCompat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:background="@color/line" />
    </LinearLayout>
</LinearLayout>